검색 후 카메라 이동 추가 1. 카메라 이동 후 Entity 생성 2. Entity 생성할 때 most detail height 가져와서 Entity 생성

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
     </div>
     <div id="cesiumContainer" class="w-4/5 h-full relative">
-      <div class="absolute top-5 left-5 w-80 z-20">
+      <div class="absolute top-5 left-5 w-96 z-20">
         <div>
           <label for="searchPlace"
             class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
@@ -56,7 +56,7 @@
             </button>
           </div>
         </div>
-        <div id="searchResultList" class="text-sm bg-white">
+        <div id="searchResultList" class="text-sm bg-white rounded-b-lg">
           
         </div>
       </div>
