--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <!-- Cesium -->
   <script src="https://cesium.com/downloads/cesiumjs/releases/1.105.1/Build/Cesium/Cesium.js"></script>
   <link href="https://cesium.com/downloads/cesiumjs/releases/1.105.1/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+  <!-- lottie -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <style>
     @font-face {
       font-family: 'SUITE-Regular';
@@ -18,6 +20,7 @@
       font-weight: 400;
       font-style: normal;
     }
+
     body {
       font-family: 'SUITE-Regular';
     }
@@ -26,19 +29,60 @@
 
 <body class="w-full h-full">
   <div class="flex w-full h-full">
-    <div class="w-1/5 bg-gray-900">
+    <div class="w-1/4 bg-gray-900">
       <div class="font-bold text-2xl text-white text-center py-4 border-b border-gray-600">
         OurTravel Demo
       </div>
-      <div>
-
+      <div class="text-white px-3">
+        <div class="pt-2 pb-4">
+          <div class="w-10 h-10 flex items-center px-2 py-1 bg-gray-800 mx-2 my-1 rounded-full cursor-pointer duration-300 hover:bg-gray-50 hover:text-gray-900">
+            <svg fill="currentColor" width="0.95rem" class="mx-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+              <path
+                d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
+            </svg>
+            <span class="hidden">
+              목록으로
+            </span>
+          </div>
+        </div>
+        <div id="planHeader" class="flex justify-between items-center border-b border-gray-600 pb-4">
+          <div class="text-2xl font-bold">
+            파리로 떠나는 여행이다이다이다이다우
+          </div>
+          <div class="w-10 h-10 px-3 ml-2 flex rounded-full justify-center items-center cursor-pointer duration-300 hover:bg-gray-50 hover:text-gray-900">
+            <svg fill="currentColor" width="1rem" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <path
+                d="M441 58.9L453.1 71c9.4 9.4 9.4 24.6 0 33.9L424 134.1 377.9 88 407 58.9c9.4-9.4 24.6-9.4 33.9 0zM209.8 256.2L344 121.9 390.1 168 255.8 302.2c-2.9 2.9-6.5 5-10.4 6.1l-58.5 16.7 16.7-58.5c1.1-3.9 3.2-7.5 6.1-10.4zM373.1 25L175.8 222.2c-8.7 8.7-15 19.4-18.3 31.1l-28.6 100c-2.4 8.4-.1 17.4 6.1 23.6s15.2 8.5 23.6 6.1l100-28.6c11.8-3.4 22.5-9.7 31.1-18.3L487 138.9c28.1-28.1 28.1-73.7 0-101.8L474.9 25C446.8-3.1 401.2-3.1 373.1 25zM88 64C39.4 64 0 103.4 0 152V424c0 48.6 39.4 88 88 88H360c48.6 0 88-39.4 88-88V312c0-13.3-10.7-24-24-24s-24 10.7-24 24V424c0 22.1-17.9 40-40 40H88c-22.1 0-40-17.9-40-40V152c0-22.1 17.9-40 40-40H200c13.3 0 24-10.7 24-24s-10.7-24-24-24H88z" />
+            </svg>
+          </div>
+          
+        </div>
+        <div id="planBody" class="pt-6">
+          <div>
+            <div class="text-lg">
+              1일차
+            </div>
+            <div>
+              에펠탑
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div id="cesiumContainer" class="w-4/5 h-full relative">
+      <div class="absolute rounded bg-white shadow p-5 z-10 -translate-x-1/2 hidden text-gray-900" id="htmlOverlay">
+        <div class="text-2xl font-bold text-center border-b pb-2">
+          에펠탑
+        </div>
+        <div
+          class="flex justify-center items-center select-none cursor-pointer px-3 hover:bg-gray-200 duration-300 rounded">
+          <lottie-player src="/add.json" background="transparent" speed="1" class="w-14" loop autoplay></lottie-player>
+          여행 일정에 추가
+        </div>
+      </div>
       <div class="absolute top-5 left-5 w-96 z-20">
         <div>
-          <label for="searchPlace"
-            class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
+          <label for="searchPlace" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
           <div class="relative">
             <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
               <svg aria-hidden="true" class="w-5 h-5 text-gray-500 dark:text-gray-400" fill="none" stroke="currentColor"
@@ -56,11 +100,11 @@
             </button>
           </div>
         </div>
-        <div id="searchResultList" class="text-sm bg-white rounded-b-lg">
-          
+        <div id="searchResultList" class="text-sm bg-white rounded-b-lg select-none">
         </div>
       </div>
     </div>
+
   </div>
 </body>
 <script src="./map.js"></script>
