여행 추가 후 기존 선택 Entity 삭제

--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
         </div>
         <div id="planBody" class="pt-6">
           <div>
-            <div class="text-lg">
+            <div class="plan_day text-lg">
               1일차
             </div>
-            <div>
-              에펠탑
+            <div class="plan_place_list">
+              <div class="plan_place">
+                에펠탑
+              </div>
             </div>
           </div>
         </div>
