--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class="plan_place_list">
               <div class="plan_place">
-                에펠탑
+
               </div>
             </div>
           </div>
@@ -72,11 +72,11 @@
       </div>
     </div>
     <div id="cesiumContainer" class="w-4/5 h-full relative">
-      <div class="absolute rounded bg-white shadow p-5 z-10 -translate-x-1/2 hidden text-gray-900" id="htmlOverlay">
+      <div class="absolute rounded bg-white shadow p-5 z-10 -translate-x-1/2 hidden text-gray-900 select-none" id="htmlOverlay">
         <div class="text-2xl font-bold text-center border-b pb-2">
-          에펠탑
+          
         </div>
-        <div
+        <div id="addPlaceToList"
           class="flex justify-center items-center select-none cursor-pointer px-3 hover:bg-gray-200 duration-300 rounded">
           <lottie-player src="/add.json" background="transparent" speed="1" class="w-14" loop autoplay></lottie-player>
           여행 일정에 추가
