--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       font-style: normal;
     }
 
+    @font-face {
+      font-family: 'KBO-Dia-Gothic-bold';
+      src: url('/fonts/KBO-Dia-Gothic_bold.woff') format('woff');
+      font-weight: 700;
+      font-style: bold;
+    }
+
+    #appNM {
+      font-family: 'KBO-Dia-Gothic-bold';
+    }
+
     body {
       font-family: 'SUITE-Regular';
     }
@@ -29,14 +40,16 @@
 
 <body class="w-full h-full">
   <div class="flex w-full h-full">
-    <div class="w-1/4 bg-gray-900">
-      <div class="font-bold text-2xl text-white text-center py-4 border-b border-gray-600">
+    <div class="flex flex-col w-1/4 bg-gray-900">
+      <div id="appNM" class="font-bold text-2xl text-white text-center py-4 border-b border-gray-600">
         OurTravel Demo
       </div>
-      <div class="text-white px-3">
+      <div class="text-white px-3 flex flex-col flex-1">
         <div class="pt-2 pb-4">
-          <div class="w-10 h-10 flex items-center px-2 py-1 bg-gray-800 mx-2 my-1 rounded-full cursor-pointer duration-300 hover:bg-gray-50 hover:text-gray-900">
-            <svg fill="currentColor" width="0.95rem" class="mx-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+          <div
+            class="w-10 h-10 flex items-center px-2 py-1 bg-gray-800 mx-2 my-1 rounded-full cursor-pointer duration-300 hover:bg-gray-50 hover:text-gray-900">
+            <svg fill="currentColor" width="0.95rem" class="mx-1" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 320 512">
               <path
                 d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l192 192c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 246.6 86.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-192 192z" />
             </svg>
@@ -49,32 +62,66 @@
           <div class="text-2xl font-bold">
             나의 여행 계획
           </div>
-          <div class="w-10 h-10 px-3 ml-2 flex rounded-full justify-center items-center cursor-pointer duration-300 hover:bg-gray-50 hover:text-gray-900">
+          <div
+            class="w-10 h-10 px-3 ml-2 flex rounded-full justify-center items-center cursor-pointer duration-300 hover:bg-gray-50 hover:text-gray-900">
             <svg fill="currentColor" width="1rem" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path
                 d="M441 58.9L453.1 71c9.4 9.4 9.4 24.6 0 33.9L424 134.1 377.9 88 407 58.9c9.4-9.4 24.6-9.4 33.9 0zM209.8 256.2L344 121.9 390.1 168 255.8 302.2c-2.9 2.9-6.5 5-10.4 6.1l-58.5 16.7 16.7-58.5c1.1-3.9 3.2-7.5 6.1-10.4zM373.1 25L175.8 222.2c-8.7 8.7-15 19.4-18.3 31.1l-28.6 100c-2.4 8.4-.1 17.4 6.1 23.6s15.2 8.5 23.6 6.1l100-28.6c11.8-3.4 22.5-9.7 31.1-18.3L487 138.9c28.1-28.1 28.1-73.7 0-101.8L474.9 25C446.8-3.1 401.2-3.1 373.1 25zM88 64C39.4 64 0 103.4 0 152V424c0 48.6 39.4 88 88 88H360c48.6 0 88-39.4 88-88V312c0-13.3-10.7-24-24-24s-24 10.7-24 24V424c0 22.1-17.9 40-40 40H88c-22.1 0-40-17.9-40-40V152c0-22.1 17.9-40 40-40H200c13.3 0 24-10.7 24-24s-10.7-24-24-24H88z" />
             </svg>
           </div>
-          
+
         </div>
-        <div id="planBody" class="pt-6">
-          <div>
-            <div class="plan_day text-lg">
-              1일차
+        <div id="planBody" class="pt-6 select-none flex-1">
+          <div value="1" class="plan_day_container">
+            <div class="plan_day flex items-center text-lg">
+              <svg value="plus" class="hidden cursor-pointer hover:text-gray-400 duration-200" fill="currentColor"
+                width="1rem" xmlns="http://www.w3.org/2000/svg" height="1em"
+                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <path
+                  d="M64 80c-8.8 0-16 7.2-16 16V416c0 8.8 7.2 16 16 16H384c8.8 0 16-7.2 16-16V96c0-8.8-7.2-16-16-16H64zM0 96C0 60.7 28.7 32 64 32H384c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM200 344V280H136c-13.3 0-24-10.7-24-24s10.7-24 24-24h64V168c0-13.3 10.7-24 24-24s24 10.7 24 24v64h64c13.3 0 24 10.7 24 24s-10.7 24-24 24H248v64c0 13.3-10.7 24-24 24s-24-10.7-24-24z" />
+              </svg>
+              <svg value="minus" class="cursor-pointer hover:text-gray-400 duration-200" fill="currentColor"
+                width="1rem" xmlns="http://www.w3.org/2000/svg" height="1em"
+                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                <path
+                  d="M64 80c-8.8 0-16 7.2-16 16V416c0 8.8 7.2 16 16 16H384c8.8 0 16-7.2 16-16V96c0-8.8-7.2-16-16-16H64zM0 96C0 60.7 28.7 32 64 32H384c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zM152 232H296c13.3 0 24 10.7 24 24s-10.7 24-24 24H152c-13.3 0-24-10.7-24-24s10.7-24 24-24z" />
+              </svg>
+              <span class="ml-3">
+                1일차
+              </span>
             </div>
             <div class="plan_place_list">
-              <div class="plan_place">
 
-              </div>
             </div>
+          </div>
+        </div>
+        <div class="flex flex-col">
+          <button type="button"
+            class="w-full flex items-center justify-center text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 py-2.5 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
+            <svg class="mr-2" fill="currentColor"
+            width="1rem" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"/></svg>
+            날짜추가
+          </button>
+          <div class="flex">
+            <button type="button"
+              class="w-1/2 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 py-2.5 mr-1 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
+              <svg class="mr-2" fill="currentColor"
+              width="1rem" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M48 96V416c0 8.8 7.2 16 16 16H384c8.8 0 16-7.2 16-16V170.5c0-4.2-1.7-8.3-4.7-11.3l33.9-33.9c12 12 18.7 28.3 18.7 45.3V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96C0 60.7 28.7 32 64 32H309.5c17 0 33.3 6.7 45.3 18.7l74.5 74.5-33.9 33.9L320.8 84.7c-.3-.3-.5-.5-.8-.8V184c0 13.3-10.7 24-24 24H104c-13.3 0-24-10.7-24-24V80H64c-8.8 0-16 7.2-16 16zm80-16v80H272V80H128zm32 240a64 64 0 1 1 128 0 64 64 0 1 1 -128 0z"/></svg>
+              저장</button>
+            <button type="button"
+              class="w-1/2 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 py-2.5 ml-1 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
+              <svg class="mr-2" fill="currentColor"
+              width="1rem" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M352 224c53 0 96-43 96-96s-43-96-96-96s-96 43-96 96c0 4 .2 8 .7 11.9l-94.1 47C145.4 170.2 121.9 160 96 160c-53 0-96 43-96 96s43 96 96 96c25.9 0 49.4-10.2 66.6-26.9l94.1 47c-.5 3.9-.7 7.8-.7 11.9c0 53 43 96 96 96s96-43 96-96s-43-96-96-96c-25.9 0-49.4 10.2-66.6 26.9l-94.1-47c.5-3.9 .7-7.8 .7-11.9s-.2-8-.7-11.9l94.1-47C302.6 213.8 326.1 224 352 224z"/></svg>
+              공유</button>
           </div>
         </div>
       </div>
     </div>
     <div id="cesiumContainer" class="w-4/5 h-full relative">
-      <div class="absolute rounded bg-white shadow p-5 z-10 -translate-x-1/2 hidden text-gray-900 select-none" id="htmlOverlay">
+      <div class="absolute rounded bg-white shadow p-5 z-10 -translate-x-1/2 hidden text-gray-900 select-none"
+        id="htmlOverlay">
         <div class="text-2xl font-bold text-center border-b pb-2">
-          
+
         </div>
         <div id="addPlaceToList"
           class="flex justify-center items-center select-none cursor-pointer px-3 hover:bg-gray-200 duration-300 rounded">
