--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>아워트래블 2C</title>
+  <title>아워트래블</title>
   <!-- tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Cesium -->
-  <script src="https://cesium.com/downloads/cesiumjs/releases/1.106/Build/Cesium/Cesium.js"></script>
-  <link href="https://cesium.com/downloads/cesiumjs/releases/1.106/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.115/Build/Cesium/Cesium.js"></script>
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.115/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
   <!-- lottie -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <style>
@@ -35,10 +35,31 @@
     body {
       font-family: 'SUITE-Regular';
     }
+    .cesium-viewer-bottom {
+      display: none;
+    }
   </style>
 </head>
 
 <body class="w-full h-full">
+  <div id="shareModal" class="w-1/2 absolute px-10 py-5 z-10 left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 flex flex-col items-center justify-center bg-gray-900 text-white rounded-lg shadow hidden">
+    <div class="flex justify-between items-center text-left text-lg pt-4 pb-8 w-full font-bold">
+      여행 공유
+      <div id="share_closebtn" class="flex items-center justify-center w-10 h-10 hover:bg-gray-700 cursor-pointer duration-150 rounded-full">
+        X
+      </div>
+    </div>
+    <div class="flex items-center relative w-full mb-3">
+        <input id="shareurl" class="block w-full p-4 pl-4 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" readonly value="http://shareurl.com">
+        <button id="share_copybtn" type="submit" class="items-center flex text-white absolute right-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:outline-none font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+          <svg width="0.8rem" fill="currentColor" class="mr-2 hidden" viewBox="0 0 448 512"><path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/></svg>
+          <svg width="0.8rem" fill="currentColor" class="mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M272 0H396.1c12.7 0 24.9 5.1 33.9 14.1l67.9 67.9c9 9 14.1 21.2 14.1 33.9V336c0 26.5-21.5 48-48 48H272c-26.5 0-48-21.5-48-48V48c0-26.5 21.5-48 48-48zM48 128H192v64H64V448H256V416h64v48c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V176c0-26.5 21.5-48 48-48z"/></svg>
+          <span>
+            복사
+          </span>
+        </button>
+    </div>
+  </div>
   <div class="intro flex flex-col w-full h-full justify-center items-center bg-gray-900 text-white">
     <div class="text-2xl flex flex-col items-center mb-20">
       <div>
@@ -94,12 +115,12 @@
     <button type="button" class="w-1/2 focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:focus:ring-yellow-900">여행 불러오기</button>
   </div>
   <div class="map flex  w-full h-full hidden">
-    <div class="flex flex-col w-1/4 bg-gray-900">
-      <div id="appNM" class="font-bold text-2xl text-white text-center py-4 border-b border-gray-600">
+    <div class="flex flex-col w-1/4 bg-gray-900 h-full overflow-hidden">
+      <div id="appNM" class="font-bold text-2xl text-white text-center py-4 border-b border-gray-600 hidden">
         아워트래블 데모
       </div>
-      <div class="text-white px-3 flex flex-col flex-1">
-        <div class="pt-2 pb-4">
+      <div class="text-white px-3 flex flex-col flex-1 overflow-hidden">
+        <div class="pt-2 pb-4 hidden">
           <div
             class="w-10 h-10 flex items-center px-2 py-1 bg-gray-800 mx-2 my-1 rounded-full cursor-pointer duration-300 hover:bg-gray-50 hover:text-gray-900">
             <svg fill="currentColor" width="0.95rem" class="mx-1" xmlns="http://www.w3.org/2000/svg"
@@ -112,12 +133,12 @@
             </span>
           </div>
         </div>
-        <div id="planHeader" class="flex justify-between items-center border-b border-gray-600 pb-4">
+        <div id="planHeader" class="flex justify-between items-center border-b border-gray-600 py-4">
           <div class="text-2xl font-bold">
             나의 여행 계획
           </div>
           <div
-            class="w-10 h-10 px-3 ml-2 flex rounded-full justify-center items-center cursor-pointer duration-300 hover:bg-gray-50 hover:text-gray-900">
+            class="w-10 h-10 px-3 ml-2 flex rounded-full justify-center items-center cursor-pointer duration-300 hover:bg-gray-50 hover:text-gray-900 hidden">
             <svg fill="currentColor" width="1rem" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
               <path
                 d="M441 58.9L453.1 71c9.4 9.4 9.4 24.6 0 33.9L424 134.1 377.9 88 407 58.9c9.4-9.4 24.6-9.4 33.9 0zM209.8 256.2L344 121.9 390.1 168 255.8 302.2c-2.9 2.9-6.5 5-10.4 6.1l-58.5 16.7 16.7-58.5c1.1-3.9 3.2-7.5 6.1-10.4zM373.1 25L175.8 222.2c-8.7 8.7-15 19.4-18.3 31.1l-28.6 100c-2.4 8.4-.1 17.4 6.1 23.6s15.2 8.5 23.6 6.1l100-28.6c11.8-3.4 22.5-9.7 31.1-18.3L487 138.9c28.1-28.1 28.1-73.7 0-101.8L474.9 25C446.8-3.1 401.2-3.1 373.1 25zM88 64C39.4 64 0 103.4 0 152V424c0 48.6 39.4 88 88 88H360c48.6 0 88-39.4 88-88V312c0-13.3-10.7-24-24-24s-24 10.7-24 24V424c0 22.1-17.9 40-40 40H88c-22.1 0-40-17.9-40-40V152c0-22.1 17.9-40 40-40H200c13.3 0 24-10.7 24-24s-10.7-24-24-24H88z" />
@@ -125,10 +146,10 @@
           </div>
 
         </div>
-        <div id="planBody" class="pt-6 select-none flex-1">
+        <div id="planBody" class="pt-6 pr-4 select-none flex-1 overflow-y-scroll">
           
         </div>
-        <div class="flex flex-col">
+        <div id="footer" class="flex flex-col pt-3 border-t border-gray-700">
           <button id="add_day" type="button"
             class="w-full flex items-center justify-center text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 py-2.5 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
             <svg class="mr-2" fill="currentColor" width="1rem" xmlns="http://www.w3.org/2000/svg" height="1em"
@@ -147,7 +168,7 @@
                   d="M48 96V416c0 8.8 7.2 16 16 16H384c8.8 0 16-7.2 16-16V170.5c0-4.2-1.7-8.3-4.7-11.3l33.9-33.9c12 12 18.7 28.3 18.7 45.3V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96C0 60.7 28.7 32 64 32H309.5c17 0 33.3 6.7 45.3 18.7l74.5 74.5-33.9 33.9L320.8 84.7c-.3-.3-.5-.5-.8-.8V184c0 13.3-10.7 24-24 24H104c-13.3 0-24-10.7-24-24V80H64c-8.8 0-16 7.2-16 16zm80-16v80H272V80H128zm32 240a64 64 0 1 1 128 0 64 64 0 1 1 -128 0z" />
               </svg>
               저장</button>
-            <button type="button"
+            <button id="share" type="button"
               class="w-1/2 flex items-center justify-center text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 py-2.5 ml-1 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
               <svg class="mr-2" fill="currentColor" width="1rem" xmlns="http://www.w3.org/2000/svg" height="1em"
                 viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -171,7 +192,7 @@
           여행 일정에 추가
         </div>
       </div>
-      <div class="absolute top-5 left-5 w-96 z-20">
+      <div id="searchBox" class="absolute top-5 left-5 w-96 z-20">
         <div>
           <label for="searchPlace" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
           <div class="relative">
@@ -198,7 +219,12 @@
 
   </div>
 </body>
-<script src="./map.js"></script>
 <script src="./main.js" type="module"></script>
+<script>
+  (function(){var w=window;if(w.ChannelIO){return w.console.error("ChannelIO script included twice.");}var ch=function(){ch.c(arguments);};ch.q=[];ch.c=function(args){ch.q.push(args);};w.ChannelIO=ch;function l(){if(w.ChannelIOInitialized){return;}w.ChannelIOInitialized=true;var s=document.createElement("script");s.type="text/javascript";s.async=true;s.src="https://cdn.channel.io/plugin/ch-plugin-web.js";var x=document.getElementsByTagName("script")[0];if(x.parentNode){x.parentNode.insertBefore(s,x);}}if(document.readyState==="complete"){l();}else{w.addEventListener("DOMContentLoaded",l);w.addEventListener("load",l);}})();
 
+  ChannelIO('boot', {
+    "pluginKey": "7331ef12-d118-4e69-a574-1c7ba94cbec3"
+  });
+</script>
 </html>
